--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -4,7 +4,7 @@
 .container{
   background-color: #0f0f0f;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 99px);
   display: flex;
   justify-content: center;
   align-items: center;
